--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="main-header">
       <div class="logo">
         <a href="index.html">
-          <img src="img/logo.png" alt="SpaceX" />
+          <img src="./images/logo.png" alt="SpaceX" />
         </a>
       </div>
       <nav class="desktop-main-menu">
@@ -113,7 +113,7 @@
         <h2>STARSHIP SELECTED BY NASA TO SUPPORT SUSTAINED LUNAR EXPLORATION</h2>
         <a href="#" class="btn">
           <div class="hover"></div>
-          <span>Rewatch</span>
+          <span>Learn More</span>
         </a>
       </div>
     </section>
