finalized design-without javaScript function

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="#">Starship</a></li>
           <li><a href="#">Human Spaceflight</a></li>
           <li><a href="#">Rideshare</a></li>
+          <li><a href="#">Starshield</a></li>
           <li><a href="#">Starlink</a></li>
           <li><a href="#">Shop</a></li>
         </ul>
@@ -36,10 +37,10 @@
       <span class="hamburger-bottom"></span>
     </button>
 
-    <!-- Section A -->
+    <!-- Section 1 -->
     <section class="section-a">
       <div class="section-inner">
-        <h4>Upcoming Launch</h4>
+        <h4>Recent Launch</h4>
         <h2>CREW-6 MISSION</h2>
         <a href="#" class="btn">
           <div class="hover"></div>
@@ -59,7 +60,7 @@
       </div>
     </section>
 
-    <!-- Section B -->
+    <!-- Section 2 -->
     <section class="section-b">
       <div class="section-inner">
         <h4>Recent Launch</h4>
@@ -82,11 +83,10 @@
       </div>
     </section>
 
-    <!-- Section C -->
+    <!-- Section 3 -->
     <section class="section-c">
       <div class="section-inner">
-        <h4>Recent Mission</h4>
-        <h2>SES-22 Mission</h2>
+        <h2>Starship Update</h2>
         <a href="#" class="btn">
           <div class="hover"></div>
           <span>Rewatch</span>
@@ -107,7 +107,7 @@
 
 
 
-    <!-- Section D -->
+    <!-- Section 4 -->
     <section class="section-f">
       <div class="section-inner">
         <h2>STARSHIP SELECTED BY NASA TO SUPPORT SUSTAINED LUNAR EXPLORATION</h2>
